--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -23,6 +23,7 @@
             width: 50px;
         }
     </style>
+    <script src="/webjars/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
 <h3>Books:</h3>
@@ -31,27 +32,31 @@
     <thead>
     <tr>
         <th>ID</th>
-        <th>Title</th>
+        <th>Name</th>
         <th>Author</th>
         <th>Genre</th>
-        <th>Action</th>
     </tr>
     </thead>
     <tbody>
-    <tr th:each="book : ${books}">
-        <td th:text="${book.id}">1</td>
-        <td th:text="${book.title}">John Doe</td>
-        <td th:text="${book.author.name}"></td>
-        <td th:text="${book.genre.name}"></td>
-        <td>
-            <a href="edit.html" th:href="@{/edit(id=${book.id})}">Edit</a>
-        </td>
-        <td>
-            <a th:href="@{/delete(id=${book.id})}">Delete</a>
-        </td>
-    </tr>
     </tbody>
 </table>
+
+<script>
+    $(function () {
+        $.get('/api/books').done(function (books) {
+            books.forEach(function (book) {
+                $('tbody').append(`
+                    <tr>
+                        <td>${book.id}</td>
+                        <td>${book.title}</td>
+                        <td>${book.author}</td>
+                        <td>${book.genre}</td>
+                    </tr>
+                `)
+            });
+        })
+    });
+</script>
 <div class = "row"><a href="add.html" th:href="@{/add}"><button type="button">Add</button></a></div>
 </body>
 </html>
