--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta charset="UTF-8"/>
-    <title>Edit person</title>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>Edit book</title>
     <style type="text/css">
         body {
             padding: 50px;
@@ -21,29 +24,12 @@
             margin-top: 10px;
         }
     </style>
-    <script>
-        function saveBook() {
-            const savedBookContainer = document.getElementById("saved-book")
-            const titleInput = document.getElementById("book-title-input")
-            const authorNameInput = document.getElementById("author-name-input")
-            const genreNameInput = document.getElementById("genre-name-input")
-            const book = { title: titleInput.value}
-            fetch("api/books", {
-                method: 'POST',
-                headers: {
-                    'Accept': 'application/json',
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(book)})
-                .then(rawResponse => rawResponse.json())
-                .then(json => savedBookContainer.innerHTML = JSON.stringify(json, null, 4))
-        }
-    </script>
+    <script type="text/javascript" th:src="@{/book.js}"></script>
 </head>
 <body>
 
 <h3>Form for new person creation:</h3>
-<form id="edit-form" action="add.html" th:method="post" th:action="@{/api/books}">
+<form id="add-form" action="add.html" th:method="post">
     <div class="row">
         <label for="book-title-input">Title:</label>
         <input id="book-title-input" name="title" type="text" />
@@ -58,13 +44,13 @@
     </div>
 
     <div class="row">
-        <button type="button" onclick="saveBook()" >Save</button>
+        <button type="button" onclick="saveBook()">Save</button>
         <a href="list.html" th:href="@{/}"><button type="button">Go Back</button></a>
     </div>
 </form>
 
 <h3>Saved book:</h3>
 <pre id = "saved-book"></pre>
-
+<script type="text/javascript" th:src="@{/book.js}"></script>
 </body>
 </html>
